fix sln file, update packages file and add blazor web app

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,5 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10" />
   </ItemGroup>
 </Project>
