add auth and global exception handler

--- a/GidroAtlas.Api/appsettings.json
+++ b/GidroAtlas.Api/appsettings.json
@@ -9,5 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=gidroatlas_db;Username=postgres;Password=postgres"
+  },
+  "JwtSettings": {
+    "SecretKey": "GidroAtlasSecretKey2024SuperSecureKeyForJwtTokenGeneration!@#$",
+    "Issuer": "GidroAtlas.Api",
+    "Audience": "GidroAtlas.Web",
+    "ExpirationMinutes": 480
   }
 }
