--- a/GidroAtlas.Api/appsettings.json
+++ b/GidroAtlas.Api/appsettings.json
@@ -15,5 +15,11 @@
     "Issuer": "GidroAtlas.Api",
     "Audience": "GidroAtlas.Web",
     "ExpirationMinutes": 480
+  },
+  "CorsSettings": {
+    "AllowedOrigins": [
+      "http://localhost:5001",
+      "https://localhost:5002"
+    ]
   }
 }
