--- a/GidroAtlas.Web/GidroAtlas.Web.csproj
+++ b/GidroAtlas.Web/GidroAtlas.Web.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GidroAtlas.Shared\GidroAtlas.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
