--- a/GidroAtlas.Web/appsettings.json
+++ b/GidroAtlas.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ApiSettings": {
-    "BaseUrl": "http://localhost:5000"
+    "BaseUrl": "http://localhost:5048/"
   }
 }
