--- a/GidroAtlas.Web/GidroAtlas.Web.csproj
+++ b/GidroAtlas.Web/GidroAtlas.Web.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\GidroAtlas.Shared\GidroAtlas.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MudBlazor" />
+  </ItemGroup>
+
 </Project>
