--- a/GidroAtlas.Api/GidroAtlas.Api.csproj
+++ b/GidroAtlas.Api/GidroAtlas.Api.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ML" />
     <PackageReference Include="Swashbuckle.AspNetCore" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
@@ -18,6 +19,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" />
     <PackageReference Include="BCrypt.Net-Next" />
+    <PackageReference Include="Pgvector" />
+    <PackageReference Include="Pgvector.EntityFrameworkCore" />
   </ItemGroup>
 
   <ItemGroup>
@@ -26,6 +29,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GidroAtlas.Shared\GidroAtlas.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Infrastructure\ML\MLModels\**\*" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
