--- a/GidroAtlas.Api/appsettings.json
+++ b/GidroAtlas.Api/appsettings.json
@@ -25,5 +25,16 @@
       "http://localhost:21657",
       "https://localhost:44339"
     ]
+  },
+  "ML": {
+    "ModelType": "Advanced" // Basic
+  },
+  "Ollama": {
+    "BaseUrl": "http://localhost:11434",
+    "ChatModel": "qwen3:4b",
+    "EmbeddingModel": "nomic-embed-text",
+    "TimeoutSeconds": 120,
+    "Temperature": 0.7,
+    "MaxTokens": 1024
   }
 }
