Добавил Дашборд Приоритезации, с актуальными данными, но без фильтров, добавил рабочую карту, надо поправить расположение маркеров

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,6 +3,7 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="BlazorLeafletInterop" Version="4.3.2" />
     <PackageVersion Include="MudBlazor" Version="8.15.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
