--- a/GidroAtlas.Web/appsettings.json
+++ b/GidroAtlas.Web/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=gidroatlas_db;Username=postgres;Password=postgres"
+  },
   "ApiSettings": {
     "BaseUrl": "http://localhost:5048/"
   }
