--- a/GidroAtlas.Web/GidroAtlas.Web.csproj
+++ b/GidroAtlas.Web/GidroAtlas.Web.csproj
@@ -11,7 +11,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorLeafletInterop" />
     <PackageReference Include="MudBlazor" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GidroAtlas.Api\GidroAtlas.Api.csproj" />
   </ItemGroup>
 
 </Project>
