--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -14,5 +14,6 @@
     <PackageVersion Include="Pgvector" Version="0.3.2" />
     <PackageVersion Include="Pgvector.EntityFrameworkCore" Version="0.2.2" />
     <PackageVersion Include="Microsoft.ML" Version="5.0.0" />
+	<PackageVersion Include="PdfPig" Version="0.1.12" />
   </ItemGroup>
 </Project>
