Add fine-tuning for ollama model

--- a/GidroAtlas.Api/appsettings.json
+++ b/GidroAtlas.Api/appsettings.json
@@ -27,14 +27,15 @@
     ]
   },
   "ML": {
-    "ModelType": "Advanced" // Basic
+    "ModelType": "Advanced"
   },
   "Ollama": {
     "BaseUrl": "http://localhost:11434",
     "ChatModel": "qwen3:4b",
     "EmbeddingModel": "nomic-embed-text",
-    "TimeoutSeconds": 120,
-    "Temperature": 0.7,
-    "MaxTokens": 1024
+    "TimeoutSeconds": 60,
+    "Temperature": 0.3,
+    "MaxTokens": 512,
+    "NumCtx": 4096
   }
 }
